# UZH_ECMASCRIPT_PROJECT

./: FINAL_REPORT.docx  LICENSE  README.md
engine_comparison/: ECMAScripts_Comparison_Table.docx  RuntimeComparison.md
lwms/: Cargo.toml  readme.md
lwms/src/: main.rs
lwms_ric/: Cargo.toml  QUESTIONS.md  README.md
lwms_ric/main_modules/: test_01.js  test_02.js
lwms_ric/side_modules/: double.mjs  mathjs.mjs
lwms_ric/src/: main.rs
lwms_ric/src/util/: deno_wrapper.rs  mod.rs  module_loader.rs  par_parser.rs  quick_js_wrapper.rs
lwms_ric/src/wrappers/: mod.rs
lwms_ric/support_modules/side_modules/: loop.mjs
lwms_ric/support_modules/test_scripts/: test_01.js  test_02.js
meeting_notes/: meeting01.md  meeting02.md  meeting03.md  meeting04.md  meeting05.md  meeting06.md  meeting07.md  meeting08.md  meeting09  meeting09.md
perf_comparison/: README.md  build.rs
project-objectives/: README.md
report/: table-of-contents.md
stage-1-ecmascript-engine-survey/: comparison-criteria.md
stage-2/: README.md  notes.md
stage-2/nats-receiver/: Cargo.toml  config.json
stage-2/nats-receiver/functions/: double.mjs  empty-module.js  function-1.js  function-2.js  function-web-worker-creator.js  functions-declaration.js  main-worker-test-env-setup.js  main-worker-test-function.js  web-worker-module.js
stage-2/nats-receiver/src/: config.rs  functions.rs  main.rs  web_worker_manager.rs  web_worker_manager_cleaned.rs  worker.rs
stage-2/nats-receiver/src/util/: config_parser.rs  logger.rs  mod.rs  nats_messages.rs
stage_01/: README.md
(+14 files in other folders)
