[package]
name = "jsruntime_test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.102.0"
deno_runtime = "0.28.0"
tokio = "1.12.0"
url = "2.2.2"

#[patch.crates-io]
#deno_runtime = { git = "https://github.com/denoland/deno" }
#deno_core = { git = "https://github.com/denoland/deno" }
