[package]
name = "deno-function-executor"
version = "0.1.0"
authors = ["Sea'n Murphy <sean@iotify.io>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
# nats = "0.15.2"
futures = "0.3.17"
#rants = "0.5.0"
rants = { git = "https://github.com/habitat-sh/rants" }
serde_json = "1.0.68"
clap = "3.0.0-beta.5"
deno_core = "0.105.0"
deno_runtime = "0.31.0"
tokio = { version =  "1.12.0", features = ["full"] }
url = "2.2.2"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
queues = "1.0.2"

[patch.crates-io]
#deno_runtime = { git = "https://github.com/denoland/deno", branch="main" }
#deno_core = { git = "https://github.com/denoland/deno", branch="main" }
#rants = { git = "https://github.com/habitat-sh/rants", branch="master" }
